--- a/IntegralNative/package.json
+++ b/IntegralNative/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "integralnative",
+  "name": "tp05_integrador",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/native-stack": "^6.9.16",
     "expo": "~49.0.15",
-    "expo-calendar": "~11.3.2",
-    "expo-permissions": "^14.4.0",
+    "expo-av": "~13.4.1",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-camera": "~13.4.4",
+    "expo-clipboard": "^4.5.0",
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-sensors": "~12.3.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.13.4",
-    "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.1",
+    "react-native-video": "^2.3.1",
+    "react-native-video-player": "^0.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
