--- a/IntegralNative/package.json
+++ b/IntegralNative/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
     "expo-av": "~13.4.1",
     "expo-barcode-scanner": "~12.5.3",
